--- a/package.json
+++ b/package.json
@@ -9,10 +9,25 @@
   },
   "dependencies": {
     "expo": "~39.0.2",
+    "expo-camera": "~9.0.0",
+    "expo-location": "~9.0.0",
+    "expo-permissions": "~9.3.0",
     "expo-status-bar": "~1.0.2",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-moment": "^1.1.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native-autogrow-textinput": "^5.4.0",
+    "react-native-background-timer": "^2.4.1",
+    "react-native-calendar-picker": "^7.0.8",
+    "react-native-calendars": "^1.1129.0",
+    "react-native-get-location": "^2.0.0",
+    "react-native-hide-show-password-input": "^1.1.0",
+    "react-native-maps": "0.27.1",
+    "react-native-maps-directions": "^1.8.0",
+    "react-native-paper": "^4.4.1",
+    "react-native-phone-call": "^1.0.9",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
